# TAI

./: .gitignore  Makefile  README.md  run.sh  run_cpm.sh  run_mutate.sh
CompressingTests/: T_test.sh  run_comps.sh  run_gatsby.sh  run_maias.sh
CompressingTests/7zip/: chry.7z  gatsby.7z  maias.7z  mutated1_gatsby.7z  mutated1_maias.7z  mutated2_gatsby.7z  mutated2_maias.7z  mutated3_gatsby.7z  mutated3_maias.7z  mutated4_gatsby.7z  mutated4_maias.7z
CompressingTests/bzip2/: mutated1_gatsby.txt.bz2  mutated1_maias.txt.bz2  mutated2_gatsby.txt.bz2  mutated2_maias.txt.bz2  mutated3_gatsby.txt.bz2  mutated3_maias.txt.bz2  mutated4_gatsby.txt.bz2  mutated4_maias.txt.bz2
CompressingTests/lz4/: mutated1_gatsby.txt.lz4  mutated1_maias.txt.lz4  mutated2_gatsby.txt.lz4  mutated2_maias.txt.lz4  mutated3_gatsby.txt.lz4  mutated3_maias.txt.lz4  mutated4_gatsby.txt.lz4  mutated4_maias.txt.lz4
CompressingTests/tar/: mutated1_gatsby.tar  mutated1_maias.tar  mutated2_gatsby.tar  mutated2_maias.tar  mutated3_gatsby.tar  mutated3_maias.tar  mutated4_gatsby.tar  mutated4_maias.tar
CompressingTests/zstd/: mutated1_gatsby.txt.zst  mutated1_maias.txt.zst  mutated2_gatsby.txt.zst  mutated2_maias.txt.zst  mutated3_gatsby.txt.zst  mutated3_maias.txt.zst  mutated4_gatsby.txt.zst  mutated4_maias.txt.zst
Grupo 6/: README.md  run_cpm.sh
Grupo 6/Assignment1/: README.md
Grupo 6/Assignment1/src/cpm/: cpm.cpp
Grupo 6/Assignment1/src/include/utils/: Helpers.cpp  utils.hpp
Grupo 6/Assignment1/src/mutate/: main.cpp
Grupo 6/assignment1/Grupo 6/src/include/argparser/: argparser.cpp
Grupo 6/assignment1/Grupo 6/src/include/utils/: utf8Parser.cpp
Grupo 6/assignment2/: run.sh
Grupo 6/assignment2/dataset/: rcModel.csv  rhModel.csv
Grupo 6/assignment2/src/: main.cpp
Grupo 6/assignment2/src/include/argparser/: argparser.cpp
Grupo 6/assignment2/src/include/utils/: helpers.hpp
Grupo 6/assignment3/: README.md  SegmentExtractor.sh
Grupo 6/assignment3/cmake/toolchains/: windows.toolchain.cmake
Grupo 6/assignment3/data/query_segments/: spec.md
Grupo 6/assignment3/report/py_scripts/: mp3toWav.py  youDown.py
Grupo 6/assignment3/src/: Helpers.cpp  MusicIdentifier.cpp
Grupo 6/assignment3/src/include/: Compressor.hpp
Grupo 6/src/include/: mutate.hpp
Grupo 6/src/include/utils/: Utf8Reader.hpp  utf8Parser.hpp
assignment1/: .gitignore
assignment1/Grupo 6/: Makefile  run_mutate.sh
assignment1/Grupo 6/src/cpm/: main.cpp
assignment1/Grupo 6/src/include/: cpm.hpp
assignment1/Grupo 6/src/include/utils/: Helpers.hpp  parser.hpp  utf8Character.hpp
assignment2/: CMakeLists.txt  Makefile  README.md  run.sh
assignment2/dataset/: dataTest.csv  test.txt
assignment2/src/: fcm.cpp  main.cpp
assignment2/src/include/: fcm.cpp  fcm.hpp
assignment2/src/include/utils/: CircularBuffer.hpp  Fcm2.cpp  Fcm2.hpp  FileReader.cpp  FileReader.hpp  fcm.hpp  helpers.cpp  helpers.hpp
assignment3/: .gitignore  AudioCoffee - Motivational Synthwave_0_noisy.sig  CMakeLists.txt  Makefile  Makefile.linux  MusicID_TAI_G06.pdf:Zone.Identifier  MusicIdentifier.sh  README.md  SegmentCreator.sh  gzip.sh  musicSigExtractor.sh  tests.sh  zstd.sh
assignment3/GetMaxFreqs/src/: CMakeLists.txt  GetMaxFreqs.cpp
assignment3/cmake/toolchains/: linux.toolchain.cmake
assignment3/commands/: GenerateSignatures.sh  MusicIdentifier.sh  NoiseAdder.sh  SegmentCreator.sh  SegmentExtractor.sh  SegmentsCreator.sh  SignaturesCreator.sh  musicSigExtractor.sh
assignment3/executables/: compile.sh  musicSigExtractor.sh
assignment3/src/: AudioHandler.cpp  AudioHandler.hpp  Compressor.cpp  GetMaxFreqs.cpp  Helpers.cpp  MusicIdentifier.cpp  MusicSigExtractor.cpp  NoiseAdder.cpp  SegmentCreator.cpp  SegmentExtractor.cpp  SegmentsCreator.cpp  SignaturesCreator.cpp
assignment3/src/include/: Compressor.hpp  Constants.hpp  Helpers.cpp  Helpers.hpp
cpm/src/: main.cpp
cpm/src/include/argparser/: argparser.cpp
cpm/src/include/cpm/: utils.hpp
mutate/src/: main.cpp
mutate/src/include/argparser/: argparser.cpp  argparser.hpp
src/: main.cpp
src/cpm/: cpm.cpp  main.cpp
src/include/: cpm.hpp  cpm2.hpp  mutate.hpp
src/include/argparser/: argparser.cpp  argparser.hpp
src/include/circularBuffer/: circularBuffer.cpp  circularBuffer.hpp
src/include/cpm/: utils.cpp
src/include/utils/: AlphabetBuilder.hpp  CircularBuffer.cpp  CircularBuffer.hpp  FrequencyModel.cpp  FrequencyModel.hpp  Helpers.cpp  SourceInfo.hpp  Utf8Reader.cpp  Utf8Reader.hpp  parser.hpp  utf8Character.hpp  utf8Parser.cpp  utf8Parser.hpp  utils.cpp  utils.hpp  utils2.hpp
src/mutate/: main.cpp  mutate.cpp
